Fix: take paragraph line-height into account for vertical spacing

--- a/src/ishi/10-typography/_group-a.scss
+++ b/src/ishi/10-typography/_group-a.scss
@@ -2,6 +2,7 @@
 $type-pica-font-size: 15px;
 $type-list-indent: $type-pica-font-size * 2;
 $type-p-spacing: $type-pica-font-size;
+$type-non-p-spacing: 20px;
 
 /**
  * styles
@@ -48,7 +49,7 @@ $type-p-spacing: $type-pica-font-size;
 }
 
 @mixin type-pica-spacing() {
-    margin-top: $type-pica-font-size;
+    margin-top: $type-p-spacing;
 }
 
 @mixin type-longprimer() {
