--- a/src/ishi/10-typography/_group-b.scss
+++ b/src/ishi/10-typography/_group-b.scss
@@ -6,6 +6,7 @@
 $type-pica-font-size: 16px;
 $type-list-indent: $type-pica-font-size * 2;
 $type-p-spacing: $type-pica-font-size;
+$type-non-p-spacing: 20px;
 
 /**
  * styles
@@ -52,7 +53,7 @@ $type-p-spacing: $type-pica-font-size;
 }
 
 @mixin type-pica-spacing() {
-    margin-top: $type-pica-font-size;
+    margin-top: $type-p-spacing;
 }
 
 @mixin type-longprimer() {
