--- a/src/ishi/10-typography/_group-c.scss
+++ b/src/ishi/10-typography/_group-c.scss
@@ -6,6 +6,7 @@
 $type-pica-font-size: 18px;
 $type-list-indent: $type-pica-font-size * 2;
 $type-p-spacing: $type-pica-font-size;
+$type-non-p-spacing: 24px;
 
 /**
  * styles
