--- a/src/ishi/10-typography/styles/_text.scss
+++ b/src/ishi/10-typography/styles/_text.scss
@@ -23,7 +23,7 @@ blockquote {
     display: block;
     border-left: 1px solid $main-type-blockquote-border-color;
     padding-left: $type-p-spacing;
-    margin-bottom: $type-p-spacing;
+    margin-bottom: $type-non-p-spacing;
 
     p {
         margin-bottom: $type-p-spacing / 2;
